--- a/dashboard/src/main/resources/dashboard-client/app/views/list.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.html
@@ -1,3 +1,6 @@
-<h4 class="page-title">{{ title }}</h4>
+<ol class="breadcrumb">
+    <li><a href="#">Home</a></li>
+    <li class="active">List</li>
+</ol>
 <div ui-view></div>
 </div>
