--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.html
@@ -1,9 +1,13 @@
-<h4 class="page-title">{{ title }}</h4>
-<hr>
+<ol class="breadcrumb">
+    <li><a href="#">Home</a></li>
+    <li ng-if="isAdmin"><a href="#/list/all">List</a></li>
+    <li ng-if="!isAdmin"><a href="#/list/?submittedby={{profile.id}}">List</a></li>
+    <li class="active">Entry</li>
+</ol>
 <div class="viewnav">
     <div class="btn-group" role="group">
-        <button type="button" class="btn btn-info" ui-sref-active="active" ui-sref=".single">Create Entry</button>
-        <button type="button" class="btn btn-info" ui-sref-active="active" ui-sref=".upload">Upload entries in bulk</button>
+        <button type="button" class="btn btn-default" ui-sref-active="active" ui-sref=".single">Create Entry</button>
+        <button type="button" class="btn btn-default" ui-sref-active="active" ui-sref=".upload">Upload entries in bulk</button>
     </div>
 </div>
 <div class="row page-content">
