--- a/dashboard/src/main/resources/dashboard-client/app/views/admin.allusers.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/admin.allusers.html
@@ -3,9 +3,12 @@
 </div>
 
 <table class="table">
+
 <tr ng-repeat="user in users">
-  <td>{{user.userName}}</td>
+
+  <td>{{user.username}}</td>
   <td>{{user.email}}</td>
-  <td>{{user.role}}</td>
+  <td>{{user.roles}}</td>
+
 </tr>
 </table>
