--- a/dashboard/src/main/resources/dashboard-client/app/views/createuserform.directive.template.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/createuserform.directive.template.html
@@ -8,28 +8,29 @@
     <div class="form-group">
       <label for="username" class="col-sm-2 control-label">Username</label>
       <div class="col-sm-4">
-        <input class="form-control" id="username" type="username" placeholder="username" name="username" ng-model="createUserForm.userName">
+        <input value="" class="form-control" id="username" type="username" placeholder="username" name="username" ng-model="createUserForm.username">
       </div>
     </div>
     <div class="form-group">
       <label for="email" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-4">
-        <input class="form-control" id="email" type="email" placeholder="email" name="email" ng-model="createUserForm.email">
+        <input autocomplete='off' class="form-control" id="email" type="email" placeholder="email" name="email" ng-model="createUserForm.email">
       </div>
     </div>
     <div class="form-group">
-      <label for="role" class="col-sm-2 control-label">Assign Role</label>
+      <label for="roles" class="col-sm-2 control-label">Assign Role</label>
       <div class="col-sm-4">
-        <select id="role" ng-model="createUserForm.role">
-          <option name="admin">Admin</option>
-          <option name="lexicographer" ng-selected="true">Lexicographer</option>
+        <select id="roles" ng-model="createUserForm.roles" multiple>
+          <option name="admin" value="ROLE_ADMIN">Admin</option>
+          <option name="lexicographer" value="ROLE_LEXICOGRAPHER" ng-selected="true">Lexicographer</option>
+          <option name="basic" value="ROLE_BASIC" ng-selected="true">Basic</option>
         </select>
       </div>
     </div>
     <div class="form-group">
       <label for="password" class="col-sm-2 control-label">Password</label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="password" placeholder="password" name="password" ng-model="createUserForm.password">
+        <input value="" type="password" class="form-control" id="password" placeholder="password" name="password" ng-model="createUserForm.password">
       </div>
     </div>
 
