--- a/website/src/main/resources/public/assets/css/style.css
+++ b/website/src/main/resources/public/assets/css/style.css
@@ -8,6 +8,36 @@ body {
     font-weight: 400;
 }
 
+div#head {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #D8CBB8;
+    height: 380px;
+}
+
+div#head div#search {
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 8%;
+}
+
+div#search input {
+    height: 48px;
+    width: 38%;
+    border: 2px solid #CCBDA8;
+    font-size: 30px;
+    border-radius: 5px;
+}
+
+div#search button {
+    height: 52px;
+    width: 105px;
+}
+
+div#search span#search-text-heading {
+    color: #C3A96E;
+}
+
 strong { font-weight: 700; }
 .brown { color: #C3A96E; }
 a:hover { text-decoration: none; }
@@ -104,10 +134,6 @@ a:hover { text-decoration: none; }
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-div.wrapper {
-    padding: 30px;
 }
 
 .numbers {
