YOR-26 Add ability from the dashboard for an authorized user to add/remove a name to/from search index

--- a/dashboard/src/main/resources/dashboard-client/app/views/list.all.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/list.all.html
@@ -91,6 +91,8 @@
                     <td>{{ entry.date }}</td>
                     <td>
                         <a href="#/list/edit?name={{ entry.name }}" class="btn btn-primary btn-xs">Edit</a>
+                        <a ng-if="entry.indexed  === false && isAdmin === true" ng-click="indexName(entry.name)" class="btn btn-primary btn-xs">Add to Search</a>
+                        <a ng-if="entry.indexed  === true && isAdmin === true" ng-click="removeNameFromIndex(entry.name)" class="btn btn-danger btn-xs">Remove from Search</a>
                     </td>
                 </tr>
             </tbody>
