YOR-1 Added building blocks on which model information can be retrieved and passed to the client for display

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -51,16 +51,17 @@
                                 </ul>
                         </li>
                         
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle lang" data-toggle="dropdown"><i class="fa fa-globe sec-color"></i> {{message "lang.language"}}<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Yorùbá</a></li>
-                                    <li><a href="#">Igbo</a></li>
-                                    <li><a href="#">Hausa</a></li>                                    
-                                    <li><a href="#">English</a></li>
-                                    <li><a href="#">Français</a></li>
-                                </ul>
-                        </li>
+                        <!--Disabling the drop down till we support another language
+                        <li class="dropdown">-->
+                            <!--<a href="#" class="dropdown-toggle lang" data-toggle="dropdown"><i class="fa fa-globe sec-color"></i> {{message "lang.language"}}<b class="caret"></b></a>-->
+                                <!--<ul class="dropdown-menu">-->
+                                    <!--<li><a href="#">Yorùbá</a></li>-->
+                                    <!--<li><a href="#">Igbo</a></li>-->
+                                    <!--<li><a href="#">Hausa</a></li>                                    -->
+                                    <!--<li><a href="#">English</a></li>-->
+                                    <!--<li><a href="#">Français</a></li>-->
+                                <!--</ul>-->
+                        <!--</li>-->
                     </ul>
                 </div>
             </div>                    
