--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -25,33 +25,27 @@
                 <ul>
                     <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
                     <hr />
-                    <li><a href="#">Tolulope</a></li>
-                    <li><a href="#">Idowu</a></li>
-                    <li><a href="#">Abimbola</a></li>
-                    <li><a href="#">Oshodi</a></li>
-                    <li><a href="#">Kolawole</a></li>
+                    {{#each latestSearches}}
+                        <li>{{this.name}}</li>
+                    {{/each}}
                 </ul>
             </div>
             <div class="col-xs-6 col-sm-4 llm-box">
                 <ul>
                     <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
                     <hr />
-                    <li><a href="#">Tolulope</a></li>
-                    <li><a href="#">Idowu</a></li>
-                    <li><a href="#">Abimbola</a></li>
-                    <li><a href="#">Oshodi</a></li>
-                    <li><a href="#">Kolawole</a></li>
+                    {{#each latestAdditions}}
+                        <li>{{this.name}}</li>
+                    {{/each}}
                 </ul>
             </div>
             <div class="col-xs-6 col-sm-4 llm-box">
             	<ul>
                     <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
                     <hr />
-                    <li><a href="#">Tolulope</a></li>
-                    <li><a href="#">Idowu</a></li>
-                    <li><a href="#">Abimbola</a></li>
-                    <li><a href="#">Oshodi</a></li>
-                    <li><a href="#">Kolawole</a></li>
+                    {{#each mostPopular}}
+                        <li>{{this.name}}</li>
+                    {{/each}}
                 </ul>
             </div>
         </div>
