--- a/dashboard/src/main/resources/dashboard-client/app/scripts/components/entrycomponent/views/addEtymologyComponent.html
+++ b/dashboard/src/main/resources/dashboard-client/app/scripts/components/entrycomponent/views/addEtymologyComponent.html
@@ -1,9 +1,11 @@
 <div class="row ng-scope" ng-repeat="obj in formEntry.etymology track by $index">
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
         <input placeholder="Part" class="form-control margin15down ng-pristine ng-valid" ng-model="obj.part" type="text">
+        <h6 ng-show="nameForm.etymologyPart{{$index}}.$invalid && !nameForm.etymologyPart{{$index}}.$pristine" class="help-block">This etymology text box cannot be empty</h6>
     </div>
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-        <input placeholder="Meaning" class="form-control margin15down ng-pristine ng-valid" ng-model="obj.meaning" type="text">
+        <input placeholder="Meaning" class="form-control margin15down ng-pristine ng-valid" ng-model="obj.meaning" type="text" name="etymologyMeaning{{$index}}">
+        <h6 ng-show="nameForm.etymologyMeaning{{$index}}.$invalid && !nameForm.etymologyMeaning{{$index}}.$pristine" class="help-block">This etymology meaning text box cannot be empty</h6>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><i ng-click="removeEtymology($index)" class="fa fa-close"></i></div>
 </div>
