--- a/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/entry.upload.html
@@ -1,24 +1,37 @@
 <form name="uploadForm" class="form-horizontal" role="form" ng-controller="uploadEntryController">
-
-
-  <div id="msg-container" class="{{msg.type}}">
-    {{msg.text}}
-  </div>
-
-  <div class="form-group">
-    <label for="uploadFiles" class="col-sm-2 control-label">Upload file</label>
-    <div class="col-sm-4">
-      <input type="file" class="form-control" id="uploadFiles" placeholder="Upload file" name="nameFiles" file-model="namesfile">
+    <div id="msg-container" class="{{msg.type}}">
+        {{msg.text}}
     </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button ng-click="upload()" class="btn btn-success">Upload Names</button>
+    <div class="form-group">
+        <div class="col-sm-4">
+            <h5>{{filename}}</h5>
+            <div class="fileUpload btn btn-default btn-lg" style="margin-top: 5px; margin-bottom: 10px">
+                <span>Select Template to Upload</span>
+                <input type="file" file-model="namesfile" name="nameFiles" class="upload" />
+                <!--  <h6 ng-show="uploadForm.nameFiles.$invalid && !uploadForm.nameFiles.$pristine" class="help-block">A valid nameFiles is required</h6> -->
+            </div>
+        </div>
     </div>
-  </div>
+    <div class="form-group" ng-show="invalidColumns.length > 0">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-danger">
+            <h6>*This file contains the following invalid columns</h6>
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="column in invalidColumns">{{column}}</li>
+            </ul>
+        </div>
+    </div>
+    <div class="form-group" ng-show="postErrors.length > 0">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-danger">
+            <h6>*Error occured on the following rows</h6>
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="column in postErrors">{{column}}</li>
+            </ul>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">
+            <button ng-click="parseForm()" ng-show="validFile" class="btn btn-success">Upload Now</button>
+        </div>
+    </div>
 </form>
-
-<hr/>
-Uploaded spreadsheets should have their column in a particular order [Insert the order here]. We have provided a name entry template
-with the columns in the right other. Download the <a href="{{appEndpoint}}/name_entry_template.xlsx">name entry template here</a>
+<hr/> Uploaded spreadsheets should have their column in a particular order [Insert the order here]. We have provided a name entry template with the columns in the right other. Download the <a href="{{appEndpoint}}/name_entry_template.xlsx">name entry template here</a>
